<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/LblOffset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/select_offset"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <NumberPicker
            android:id="@+id/offsetPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/LblOffset" />

         <Button
             android:id="@+id/BtnOK"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:onClick="submitChoice"
             android:text="@string/ok" />

         <Spinner
             android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/LblLayout" />

         <Spinner
             android:id="@+id/Spinner01"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/TextView01" />

         <TextView
             android:id="@+id/TextView02"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/Spinner01"
             android:text="@string/select_choice_type"
             android:textAppearance="?android:attr/textAppearanceLarge" />

         <Spinner
             android:id="@+id/Spinner02"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/TextView02" />

         <TextView
             android:id="@+id/LblLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/offsetPicker"
             android:text="@string/select_layout"
             android:textAppearance="?android:attr/textAppearanceLarge" />

         <TextView
             android:id="@+id/TextView01"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/layout"
             android:text="@string/select_final_selection_option"
             android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>